<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/home_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:background="@drawable/bg_whit_shadw_2"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_user_photo"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginLeft="27dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_user_dept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/text_gray_999"
                    android:textSize="14sp" />
            </LinearLayout>


            <TextView
                android:id="@+id/tv_quit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:background="@drawable/bg_btn_comm"
                android:gravity="center"
                android:paddingBottom="3dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="3dp"
                android:text="@string/exit"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />
        </LinearLayout>
    </FrameLayout>


    <LinearLayout
        android:id="@+id/work"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="6dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:id="@+id/tv_task"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_whit_shadw_2"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="35dp"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:src="@drawable/icon_task" />

            <TextView
                style="@style/Main_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_task" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tv_fault_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_whit_shadw_2"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="35dp"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:src="@drawable/icon_defect" />

            <TextView
                style="@style/Main_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_fault_submit" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/work">

        <TextView
            android:id="@+id/tv_inject_manager"
            style="@style/Main_Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_whit_shadw_2"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/icon_lubricate"
            android:text="@string/main_inject_manager" />

        <TextView
            android:id="@+id/tv_alarm_news"
            style="@style/Main_Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_whit_shadw_2"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/icon_alarm"
            android:text="@string/main_alarm_news" />

        <TextView
            android:id="@+id/tv_fault_record"
            style="@style/Main_Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_whit_shadw_2"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/icon_lubricate"
            android:text="@string/main_fault_record" />


        <TextView
            android:id="@+id/tv_equipment_list"
            style="@style/Main_Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_whit_shadw_2"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/icon_lubricate"
            android:text="@string/main_equipment_list" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/tv_count"
            style="@style/Main_Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_whit_shadw_2"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/icon_statistics"
            android:text="@string/main_count" />

        <TextView
            android:id="@+id/tv_customer"
            style="@style/Main_Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_whit_shadw_2"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/icon_personnel"
            android:text="@string/main_customer" />

        <TextView
            android:id="@+id/tv_work_manager"
            style="@style/Main_Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_whit_shadw_2"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/icon_standard"
            android:text="@string/main_work_manager" />

        <TextView
            android:id="@+id/tv_my_task"
            style="@style/Main_Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_whit_shadw_2"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/icon_my_task"
            android:text="@string/main_my_task" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>