<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/item_margin_left_right"
        android:layout_marginRight="@dimen/item_margin_left_right"
        android:layout_marginTop="@dimen/item_margin_left_right"
        android:background="@drawable/bg_whit_shadw_2"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="人员"
            android:textColor="@color/text_black"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_comm_white"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/icon_charts1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="20dp"
                android:text="@string/str_count_work_confirm"
                android:textColor="@color/text_gray_999"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/bg_btn_comm_white"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/icon_charts2"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="20dp"
                android:text="@string/str_count_missing"
                android:textColor="@color/text_gray_999"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/bg_btn_comm_white"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/icon_charts3"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="20dp"
                android:text="@string/str_count_post"
                android:textColor="@color/text_gray_999"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/item_margin_left_right"
        android:layout_marginRight="@dimen/item_margin_left_right"
        android:background="@drawable/bg_whit_shadw_2"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="缺陷"
            android:textColor="@color/text_black"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_comm_white"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/icon_charts4"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="20dp"
                android:text="@string/str_fault_leve"
                android:textColor="@color/text_gray_999"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/bg_btn_comm_white"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/icon_charts5"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="20dp"
                android:text="@string/str_count_fault_num"
                android:textColor="@color/text_gray_999"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>