<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_bg_01">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/login_logo_03" />

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp">

            <LinearLayout
                android:id="@+id/ll_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/login_btn_margin_left_right"
                    android:layout_marginRight="@dimen/login_btn_margin_left_right"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/login_enter_padding_top_bottom"
                    android:paddingTop="@dimen/login_enter_padding_top_bottom">

                    <android.support.v7.widget.AppCompatMultiAutoCompleteTextView
                        android:id="@+id/edit_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorWhite"
                        android:hint="@string/hit_login_user"
                        android:inputType="textPersonName"
                        android:lines="1"
                        android:textColor="@color/text_black"
                        android:textColorHint="@color/text_black"
                        android:textSize="@dimen/login_enter_tv_size" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_marginBottom="@dimen/login_enter_margin_top_bottom"
                        android:layout_marginTop="@dimen/login_enter_margin_top_bottom"
                        android:background="@color/login_name_pass_device" />

                    <EditText
                        android:id="@+id/edit_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorWhite"
                        android:hint="@string/hit_login_pass"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:textColor="@color/text_black"
                        android:textColorHint="@color/text_black"
                        android:textSize="@dimen/login_enter_tv_size" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/login_btn_margin_left_right"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:text="忘记密码"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/tv_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/login_btn_margin_left_right"
                    android:layout_marginRight="@dimen/login_btn_margin_left_right"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/bg_login_btn_select"
                    android:gravity="center"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/str_login_btn"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/login_btn_text_size"
                    android:typeface="serif" />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>


</LinearLayout>